Creación de estructura y estilos básicos

--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuevo proyecto</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Nuestro nuevo proyecto ✨</h1>
-    <h3>Max y Jacqui</h3>
-    <p>Prototipo para practicar</p>
+    <div id="contenedor-fondo">
+        <div class="titulo">
+            <h1>Nuestro nuevo proyecto ✨
+                <h3 class="subtitulo">Max y Jacqui</h3>
+            </h1>
+        </div>  
+        <p>Prototipo para practicar</p>
+        <button>Click me!</button>
+    </div>  
+    <script src="index.js"></script>
 </body>
 </html>
