Inhabilitar el fondo por el momento

--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
 </head>
 <body>
     <div id="contenedor-fondo">
-        <div class="titulo">
-            <h1>Nuestro nuevo proyecto ✨
-                <h3 class="subtitulo">Max y Jacqui</h3>
-            </h1>
-        </div>  
+        <h1 class="titulo">Nuestro nuevo proyecto ✨</h1>
+        <h3 class="subtitulo">Max y Jacqui</h3>         
         <p>Prototipo para practicar</p>
         <button>Click me!</button>
     </div>  
