Adherir elementos nuevos a HTML y darle forma al apartado de propiedades

--- a/index.html
+++ b/index.html
@@ -7,13 +7,32 @@
     <title>Nuevo proyecto</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div id="contenedor-fondo">
-        <h1 class="titulo">Nuestro nuevo proyecto ✨</h1>
-        <h3 class="subtitulo">Max y Jacqui</h3>         
+<body id="contenedor-fondo">
+        <!-- <h1 class="titulo">Nuestro nuevo proyecto ✨</h1> -->
+        <!-- <h3 class="subtitulo">Max y Jacqui</h3>
         <p>Prototipo para practicar</p>
-        <button>Click me!</button>
-    </div>  
+        <button>Click me!</button> -->
+
+        <header class="navbar"> cracKED cOLORS</header>
+
+         <aside class="properties">
+           PROPERTIES HEX-COLOR:
+           <span class="hex-properties">--------</span>
+         </br>
+           NAVBAR HEX-COLOR:
+           <span class="hex-navbar">--------</span>
+         </br>
+           FOOTER HEX-COLOR:
+           <span class="hex-footer">--------</span>
+         </aside>
+         <button class="button">Click me!</button>
+         <div class="stars">stars </div>
+         <div class="stars1">stars1 </div>
+         <div class="stars2">stars2 </div>
+         <div class="stars3">stars3 </div>
+         <div class="stars4">stars4 </div>
+         <footer class="footer">Press anywhere to change it's color!</footer>
+    </body>
     <script src="index.js"></script>
 </body>
 </html>
