Agregué la nabvar y las estrellas

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <ul>
+            <li><a href="#home">cracKED cOLORS</a></li>
+    </ul>
+    <div class="stars">
+        <div class="star"></div>
+    </div>
     <div id="contenedor-fondo">
         <h1 class="titulo">Nuestro nuevo proyecto ✨</h1>
         <h3 class="subtitulo">Max y Jacqui</h3>         
-        <p>Prototipo para practicar</p>
         <button>Click me!</button>
-    </div>  
+        <p class="parrafo">Selecciona cualquier elemento para cambiar su color de fondo</p>  
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
