Cambio de nombres de variables y clases en JS, CSS, HTML. Limpieza gral.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <header class="navbar"> cracKED cOLORS</header>
     <aside class="properties">
         <p>NAVBAR HEX-COLOR: <span class="hex-navbar"> --------</span></p>
-        <p>PROPERTIES HEX-COLOR: <span class="hex-properties"> --------</span></p>     
+        <p>PROPERTIES HEX-COLOR: <span class="hex-properties"> --------</span></p>
         <p>FOOTER HEX-COLOR: <span class="hex-footer"> --------</span></p>
     </aside>
     <button class="button">Change all !</button>
-    <div class="stars">stars </div>
-    <div class="stars1">stars1 </div>
-    <div class="stars2">stars2 </div>
-    <div class="stars3">stars3 </div>
-    <div class="stars4">stars4 </div>
+    <div class="figure"> </div>
+    <div class="figure1"> </div>
+    <div class="figure2"> </div>
+    <div class="figure3"> </div>
+    <div class="figure4"> </div>
     <footer class="footer">Press anywhere to change it's color!</footer>
 </body>
 <script src="index.js"></script>
