--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuevo proyecto</title>
+    <title>cracKED cOLORS</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body id="contenedor-fondo">
+<body id="container-font">
     <header class="navbar"> cracKED cOLORS</header>
     <aside class="properties">
         <p>NAVBAR HEX-COLOR: <span class="hex-navbar"> --------</span></p>
@@ -20,7 +20,7 @@
     <div class="figure2"> </div>
     <div class="figure3"> </div>
     <div class="figure4"> </div>
-    <footer class="footer">Press anywhere to change it's color!</footer>
+    <footer class="footer">Press anywhere to change its color!</footer>
 </body>
 <script src="index.js"></script>
 </body>
